--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@zeit/next-workers": "^1.0.0",
     "babel-preset-env": "^1.7.0",
     "jimp": "^0.8.5",
+    "next-compose-plugins": "^2.2.0",
     "react-compare-image": "^2.0.3",
     "threads": "^1.0.0-beta.6",
     "threads-plugin": "^1.2.0",
